Change http to https.

--- a/dual.html
+++ b/dual.html
@@ -35,7 +35,7 @@ body {
     <input type="radio"  name="radio" value="2">照身高 
     <input type="radio"  name="radio" value="3">照體重
  </form></h3>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="jquery-3.1.1.min.js"></script>
 <script>
 var margin = {top: 80, right: 80, bottom: 80, left: 80},
